--- a/javaScript/javascript/convert-to-arrow/convert_to_arrow.html
+++ b/javaScript/javascript/convert-to-arrow/convert_to_arrow.html
@@ -20,7 +20,7 @@
     <p>
         We just like random interactivity in the site, including a fun effect if you hover over <span id="hover-this"><b>this.</b></span>
     </p>
-    <p id="set-color" onclick="functionFromBelow('argumentOne', document.getElementById('argumentTwo').value)">
+    <p id="set-color">
         We can click anywhere in this paragraph tag and it will change the background color to whatever is in this input: <input type="text" id="color-input"/>
     </p>
     <p onmouseover="mouseOverFunction(this)">
@@ -34,16 +34,10 @@
         document.getElementById("hover-this").onmouseover = () => setBackgroundColorById("body", "red");
         
         document.getElementById("hover-this").onmouseout = () => setBackgroundColorById("body", "white");
-        
-        function getValueFromId(id){
-            return document.getElementById(id).value;
-        }
-        function setBackgroundColorById(id, color){
-            document.getElementById(id).style = "background-color: " + color;
-        }
-        function mouseOverFunction(el){
-            el.style = "background-color: black";
-        }
+
+        document.getElementById("set-color").onclick = () => setBackgroundColorById("set-color", getValueFromId("color-input"))
+
+        const mouseOverFunction = (el) => el.style = "background-color: black"
     </script>
 </body>
 </html>
